--- a/src/app/pages/character-simple-page/character-simple-page.component.html
+++ b/src/app/pages/character-simple-page/character-simple-page.component.html
@@ -1,2 +1,2 @@
-<!--<h1 class="b-primary-text">Characters</h1>-->
+<app-search-form (filterEmmitter)="saveFormPro($event)"></app-search-form>
 <app-gallery [characters]="characters"></app-gallery>
